Fix camptix tables scroll on mobile

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -156,6 +156,7 @@ p.small {
 }
 
 /* Tables */
+#tix form,
 .wp-block-table {
     overflow-x: auto;
 }
